2006-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/warp.c: minor code cleanup.

2006-06-21  Roman Joost  <romanofski@gimp.org>

	* AUTHORS
	* authors.xml: added active docwriters from the GIMP manual

2006-06-20  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/print/Makefile.am: added build infrastructure for new
	print plug-in.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am
	* plug-ins/common/gnomeprint.c
	* plug-ins/common/winprint.c: removed gnomeprint and winprint
	plug-ins. We will have a plug-in based on GtkPrint for GIMP 2.4.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/print: removed the gimp-print plug-in. gutenprint comes
	with a GIMP plug-in, so there is no point in supporting this any
	longer.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* authors.xml: only use the "artist" role for the newly added
	contributors.

2006-06-20  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): don't
	try to set "." as current_folder_uri.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* app/dialogs/tips-dialog.c: use GIMP_STOCK_INFO for the tips dialog.

	* data/images/Makefile.am: do not install unused wilber icons.

2006-06-20  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/stock-wilber-*: tweak shape a bit
	* data/images/wilber-icon.png, gimp-logo.png: reflect the changes
	  here as well.

2006-06-20  Jakub Steiner <jimmac@ximian.com>

	* authors.xml: add Andreas, Lapo and Bill as artists.

2006-06-20  Sven Neumann  <sven@gimp.org>

	* themes/Default/images/preferences/Makefile.am: install icons at
	22x22 pixel size.

	* app/dialogs/preferences-dialog.c (prefs_notebook_append_page):
	try to load icons at 22x22 instead of scaling down the large one.

2006-06-20  Sven Neumann  <sven@gimp.org>
